# DesignPattern

./: .gitignore  CMakeLists.txt  README.md  README.txt  TODO.md  debug.cc  macro.h  main.cc  toy.cc
algorightm/: brute_force_match.cc
concurrent/: main.cc  producer_consumer.cc  thread_pool.cc  thread_pool.h
design_pattern/: README.md  behavior.cc  behavior.h  behavior_unittest.cc  create.cc  create.h  create_unittest.cc  product.cc  product.h  structure.cc  structure.h  structure_unittest.cc
design_pattern/factory_practice/: manager.cc  registry.h
design_pattern/factory_practice/core/: feature_interface.h  macro.h  manager.cc  manager.h  registry.h  scorer_interface.h  types.h
design_pattern/factory_practice/core/config/: feature_config.cc  feature_config.h  scorer_config.cc  scorer_config.h
design_pattern/factory_practice/impl/: general_feature.cc  general_feature.h  general_scorer.cc  general_scorer.h
effective_cplus/: const.cc  demo.cc  enum.cc  inheritage.cc  inheritage.h  move.cc  smart_pointer.cc  smart_pointer.h
src/: macro.h  toy.cc
src/concurrent/: main.cc  producer_consumer.cc  thread_pool.cc  thread_pool.h
src/design_pattern/: behavior.cc  behavior.h  behavior_unittest.cc  build.sh  create.cc  create.h  create_unittest.cc  product.cc  product.h  structure.cc  structure.h  structure_unittest.cc  test.cc
src/effective_cplus/: const.cc  enum.cc  note.txt
src/the_c++_programming_language/templates/: crtp.h  exercise.cc  exercise.h  main.cc  member_template.cc  note.md
test/: CMakeLists.txt
test/concurrent/: unittest.cc
test/cplus_program_lang/: crtp_unittest.cc
test/design_pattern/: behavior_unittest.cc  create_unittest.cc  structure_unittest.cc
test/toy/: product_unittest.cc  toy_unittest.cc
the_c++_programming_language/templates/: crtp.h  member_template.h  static.cc  static.h  unittest.cc
